--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -59,9 +59,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="eBookDao\ClassDao.cs" />
     <Compile Include="eBookDao\BookDao.cs" />
     <Compile Include="eBookDao\AccountDao.cs" />
     <Compile Include="eBookDao\BookManagerDao.cs" />
+    <Compile Include="eBookData\Class.cs" />
     <Compile Include="eBookData\Book.cs" />
     <Compile Include="eBookData\Account.cs" />
     <Compile Include="eBookData\BookManager.cs" />
