--- a/eBookManager/eBookManager.csproj
+++ b/eBookManager/eBookManager.csproj
@@ -211,6 +211,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Common\Encrypt.cs" />
     <Compile Include="Common\QRHelper.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BookController.cs" />
@@ -226,6 +227,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\css\datepicker.css" />
     <Content Include="Assets\css\default.css" />
     <Content Include="Assets\EmailTemplates\footer-image.png" />
     <Content Include="Assets\EmailTemplates\header-footer-image.png" />
@@ -274,6 +276,7 @@
     <Content Include="Assets\Layout\vendor\jquery\jquery.slim.js" />
     <Content Include="Assets\Layout\vendor\jquery\jquery.slim.min.js" />
     <Content Include="Assets\PagedList.css" />
+    <Content Include="Assets\Scripts\bootstrap-datepicker.js" />
     <Content Include="Assets\Scripts\dialogmessage.js" />
     <Content Include="Assets\Layout\package-lock.json" />
     <Content Include="Assets\Layout\package.json" />
@@ -1579,7 +1582,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
-    <Content Include="Views\Manage\Index.cshtml" />
+    <Content Include="Views\Manage\GetBookBorrows.cshtml" />
     <Content Include="Views\Manage\ManageLogins.cshtml" />
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
@@ -1593,6 +1596,7 @@
     <Content Include="Views\Book\Create.cshtml" />
     <Content Include="Views\Book\EditBook.cshtml" />
     <Content Include="Views\Book\GetAllBooks.cshtml" />
+    <Content Include="Views\Manage\GetBookReturns.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
