--- a/eBookManager/eBookManager.csproj
+++ b/eBookManager/eBookManager.csproj
@@ -1602,6 +1602,7 @@
     <Content Include="Views\Class\EditClass.cshtml" />
     <Content Include="Views\Class\GetAllClasss.cshtml" />
     <Content Include="Views\Account\ChangePassword.cshtml" />
+    <Content Include="Views\Account\AccountInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
